--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ install:
   - "pip install pymongo==2.8"
   - "pip install flask-mongoengine==0.7.1"
   - "pip install Pillow"
+
+dist: trusty
+
 services:
   - mongodb
 script:
